Added preauthorise and enable method sec annotations